gitignore: ignore .metadata and .gradle/ (don't commit IDE/Gradle files)

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ migrate_working_dir/
 *.iws
 .idea/
 
+.env
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
@@ -43,3 +45,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Coverage directory (ignore coverage reports)
+coverage/
+
+# Flutter/IDE metadata and Gradle cache
+.metadata
+.gradle/
