--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,14 @@ dependencies:
   go_router: ^14.7.0
   flutter_dotenv: ^6.0.0
   google_maps_flutter: ^2.14.0
+  flutter_secure_storage: ^10.0.0
+  package_info_plus: ^4.0.0
 
+  # Local packages
+  pcore:
+    path: ../pcore
+  pair_api:
+    path: ../pair_api
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +55,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  
+  # Testing packages
+  mocktail: ^1.0.4
+  bloc_test: ^10.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,11 +70,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
+    - assets/icon/dust.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
