--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,21 +31,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
+  shared_preferences: ^2.0.15
   flutter_bloc: ^9.1.1
   get_it: ^9.2.0
   go_router: ^14.7.0
   flutter_dotenv: ^6.0.0
-  google_maps_flutter: ^2.14.0
+  google_maps_flutter: ^2.14.2
   flutter_secure_storage: ^10.0.0
-  package_info_plus: ^4.0.0
+  package_info_plus: ^9.0.0
   equatable: ^2.0.8
   bloc: ^9.2.0
+  permission_handler: ^12.0.1
+  geolocator: ^14.0.2
+  dartz: ^0.10.1
+  dart_jsonwebtoken: ^2.14.0
+  dio: ^5.9.1
+  fl_chart: ^0.70.0
 
-  # Local packages
-  pcore:
-    path: ../pcore
-  pair_api:
-    path: ../pair_api
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +79,7 @@ flutter:
   assets:
     - .env
     - assets/icon/dust.png
+    - assets/icon/not_found.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
